# projects

./: .gitignore  MODULE.bazel  README.md
.github/workflows/: ci.yml  main.yml  release.yml
bazel/: WORKSPACE
bazel-gh4794/: BUILD  main.cc
bazel/2020-11-11-toolchains-platforms-toolchaintype/: README.md
bazel/2021-03-05--custom-cc-toolchain-with-platforms/: BUILD  README.md  WORKSPACE
bazel/2021-03-05--custom-cc-toolchain-with-suite/: BUILD  README.md  hello.cc
bazel/2022-02-17--rules-docker/: BUILD  Dockerfile  WORKSPACE
bazel/2022-12-23--hermetic-java/: BUILD  Main.java  README.md  WORKSPACE  archive.bzl
bazel/8dot3_pkgs/: README.md
bazel/bash-command-speed/: BUILD  README.md  cp.py
bazel/benchmark/: ccrules-standalone-hdd-windows.prof  ccrules-standalone-ssd-linux.prof  commands.txt  genrules-sandboxed-ssd-linux.prof  genrules-standalone-ssd-linux.prof  genrules-standalone-ssd-windows.prof  javarules_linux_ssd.prof  javarules_windows_hdd.prof  win-minibazel-compile-and-link-laptop.txt  win-minibazel-compile-and-link.txt  win-minibazel-compileonly.txt
bazel/compare-object-handles/: BUILD  README.md  main.cc
bazel/correctness-bug-demo-gh4734/: BUILD  Tool.java  input.txt
bazel/createproc-speed-vs-binary-size/: BUILD  README.md  createproc.cc  foo.cc
bazel/ctx_actions_run_with_file/: BUILD  README.md  foo.sh  run_tool.bzl
buildfile-ast/: main.c
experimental/grpctests/: BUILD.bazel  ClientMain.java  ServerMain.java  hello.proto
glob/: Makefile  main.cc  tbuf.cc  tbuf.h
mb/: BUILD  WORKSPACE  main.cc
quicksort/: qs.c  qs.py
(+175 files in other folders)
